--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,3 +3,8 @@ main = "src/worker.ts"
 compatibility_date = "2023-07-02"
 
 workers_dev = false
+
+[[r2_buckets]]
+binding = 'UPLOAD_BUCKET'
+bucket_name = 'image-upload'
+preview_bucket_name = 'image-upload'
